# vkTry3

./: .gitignore  .gitmodules  CMakeLists.txt  compile.sh  compile_flags.txt  makefile  readme.md  todo.md  vulcanTest
shaders/: CMakeLists.txt
src/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Doer.cpp  Doer.hpp  Image.hpp  ImageBundle.cpp  ImageBundle.hpp  Mover.cpp  Mover.hpp  Renderer.cpp  Renderer.hpp  Setup.cpp  Setup.hpp  SingleTimeCmdBuffer.cpp  SingleTimeCmdBuffer.hpp  Task.cpp  Task.hpp  UniformBufferObject.hpp  VCEngine.cpp  VCEngine.hpp  Vertex.hpp  common.hpp  engine.hpp  main.cpp  test.cpp
src/data/: UniformBufferObject.hpp  Vertex.hpp
src/jobs/: PresentJob.hpp  RecordJob.hpp  SubmitJob.hpp
src/misc/: CountedQueue.hpp  MultiConstructed.hpp
src/vkobjects/: Buffer.cpp  Buffer.hpp  BufferBundle.cpp  BufferBundle.hpp  CmdBuffer.hpp  ImageBundle.cpp  ImageBundle.hpp
src/workers/: CMakeLists.txt  Mover.cpp  Mover.hpp  RenderGroup.cpp  RenderGroup.hpp  Renderer.cpp  Renderer.hpp
tests/: CMakeLists.txt  vulkanTutorial.cpp
